# fabricversions

./: .gitignore  .gitmodules  CMakeLists.txt  Makefile  NOTICE  Package.resolved  Package.swift  README.md  build  configure  run  thingy.md
.github/workflows/: cmake.yml
Sources/fabricversions/: ColorsHelper.swift  FabricHelper.swift  GeneralUtilities.swift  GeneralUtilitis.swift  MinecraftHelper.swift  main.swift
man/: fabricV.1  fabricversions.1
scripts/: build  configure  install  run
src/: ArgumentStructure.cpp  ArgumentStructure.h  CommandLineHelper.cpp  CommandLineHelper.h  FabricHelper.cpp  FabricHelper.h  MinecraftHelper.cpp  MinecraftHelper.h  _internal.cpp  _internal.h  main.cpp
